--- a/html/Bakery.html
+++ b/html/Bakery.html
@@ -183,7 +183,7 @@
     <section id="about_us">
         <h1 class="mainheading">About Us</h1>
         <h2>Developed By</h2>
-        <h3>Digambar Chaudhari.</h3>
+        <h3>Abhi Mondal.</h3>
     </section>
 
     <footer>
